--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -462,3 +462,52 @@
     title = {Evaluating Forecasting Methods},
     doi = {10.1007/978-0-306-47630-3_20}
 }
+
+@article{moore:1965,
+    added-at = {2009-01-04T17:09:31.000+0100},
+    author = {Moore, Gordon E.},
+    biburl = {https://www.bibsonomy.org/bibtex/2867f7a1c71867074780e958c5cec38e4/lysander07},
+    interhash = {886de6a8be647a56cc3de71d50149f5e},
+    intrahash = {867f7a1c71867074780e958c5cec38e4},
+    journal = {Electronics},
+    keywords = {www01 wwwbuch wwwkap1},
+    month = {April},
+    number = 8,
+    timestamp = {2009-01-27T15:24:50.000+0100},
+    title = {Cramming more components onto integrated circuits},
+    volume = 38,
+    year = 1965
+}
+
+@book{thegrammarofgraphics,
+    author = {Wilkinson, Leland},
+    title = {The Grammar of Graphics (Statistics and Computing)},
+    year = {2005},
+    isbn = {0387245448},
+    publisher = {Springer-Verlag},
+    address = {Berlin, Heidelberg},
+} 
+
+  @Manual{forecastpackagemanual,
+    title = {{forecast}: Forecasting functions for time series and
+    linear models},
+    author = {Rob Hyndman and George Athanasopoulos and Christoph
+    Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell
+    O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo
+    Wang and Farah Yasmeen},
+    year = {2018},
+    note = {R package version 8.4},
+    url = {http://pkg.robjhyndman.com/forecast},
+}
+
+@Article{forecastpackagearticle,
+    title = {Automatic time series forecasting: the forecast package
+    for {R}},
+    author = {Rob J Hyndman and Yeasmin Khandakar},
+    journal = {Journal of Statistical Software},
+    volume = {26},
+    number = {3},
+    pages = {1--22},
+    year = {2008},
+    url = {http://www.jstatsoft.org/article/view/v027i03},
+}
