--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -1048,19 +1048,134 @@ The main packages I am using are:
 
 The functions that I used from the \texttt{forecast} package will be described in detail in section \ref{forecastpackagesection}.
 
-reiterate some R stuff and show some code for tictoc ggplot2, doParallel
-.R extension
-R program structure
-\subsection{The forecast package} \label{forecastpackagesection}
-%TODO: https://otexts.org/fpp2/the-forecast-package-in-r.html
-particularity: seasonality = frequency \cite{hyndmanseasonalperiods}
+The package \texttt{tictoc} mainly consists of functions \texttt{tic()}, called when timing of a code section should begin and \texttt{toc()}, called when timing of a code section should end. The last call has the side effect of printing the time elapsed between the \texttt{tic()} and the \texttt{toc()} call, this behavior can be avoided and the time elapsed could be stored in a variable for later processing.
 
-\subsection{Benchmark methods in code}
-Show meanf, average, naive code.
+The \texttt{ggplot2} offers a wide range of plots that one can create with several simple lines of code. All plots in this work have been created using features of \texttt{ggplot2}. From displaying simple time plots of time-series data, seasonal and seasonal sub-series plots to the QQ plots used in analyzing the residuals, \texttt{ggplot2} offers this functionality, allowing the programmer to focus on more important things like finding model parameters, instead of manually creating plots. If this package wouldn't have existed the programmer himself should have arranged the data in sub-series and then plotted them together in a seasonal sub-series image, an operation that is time consuming and not really focused on the end-goal of the project.
+
+Fortunately there is this package that automates much of the tasks needed for creating different kind of plots from time-series:
+
+\begin{itemize}
+    \item \texttt{ggseasonplot}: Plots like the one in figure \ref{exampleseasonalplot} are easily constructed by using the \texttt{ggseasonplot()} function of the \texttt{ggplot2} library;
+    \item \texttt{ggsubseriesplot}: In order to avoid manually computing each subseries of a time-series one can use the \texttt{ggsubseriesplot()} function offered by \texttt{ggplot2} to compute the subseries and plot them, along with their respective mean values, thus saving the programmer some time, an example plot produced by this function can be seen in \ref{examplesubseriesplot};
+    \item \texttt{ggAcf} and \texttt{ggPacf}: While R offers functions to compute the numerical values of the (partial) auto correlation function, this will directly plot the numerical values together with the 95\% critical value, examples of both of these plots can be seen in figure \ref{uschangeacfpacf}.
+\end{itemize}
+
+The QQ plot can be drawn easily using the code in listing \ref{qqplotr}. In this listing the \texttt{residuals} variable represents the vector of residuals obtained after fitting the ARIMA algorithm on the data.
+
+\begin{listing}[h]
+    \begin{minted}{R}
+    
+    ggplot(data.frame(y=residuals), aes(sample=y)) +
+        stat_qq() +
+        stat_qq_line() +
+        ggtitle('Residuals QQ-plot')
+    
+    \end{minted}
+    
+    \caption{Drawing a QQ plot in R}
+    \label{qqplotr}
+\end{listing}
+
+reiterate some R stuff and show some code for doParallel
+
+Another package that I have used in developing this project is the \texttt{doParallel} package. This package, according to their description \footnote{https://cran.r-project.org/web/packages/doParallel/index.html}, allows the programmer to easily parallelize a piece of code by using the \texttt{\%dopar\%} function when iterating over a collection of data. In other words, this package transforms the usual (sequential) \texttt{foreach} loop in a parallel loop. Of course this can only be done if the data are independent from each other and if the processing of the data doesn't depend on previously computed results. For ARIMA and time series both of these assumptions hold true. The listing \ref{exampleparallelcode} shows an example on how the \texttt{doParallel} package can be used practically and demonstrates another reason for using R in the scientific community, the ease of use of such packages improve the life of the programmer. In listing \ref{exampleparallelcode}, the square root function will be run in parallel, thus computing all results at once\footnote{given the fact that the computer where the code is run has more than 3 cores}.
+
+\begin{listing}[h]
+    \begin{minted}{R}
+    
+    foreach(i=1:3) %dopar% sqrt(i)    
+    
+    \end{minted}
+    
+    \caption{Basic usage of the \texttt{doParallel} package}
+    \label{exampleparallelcode}
+\end{listing}
+
+The package also provides settings for the number of cores to be used when parallelizing code, but these are omitted here for relevance issues.
+
+\subsection{The forecast package} \label{forecastpackagesection}
+
+The main R package leveraged by this dissertation is the \texttt{forecast} package \cite{forecastpackagemanual}, written by Rob J. Hyndman and others \cite{forecastpackagearticle} this is the main package used when forecasting time series.
+Combined with the time series data type in R it provides to most possibilities for analyzing and forecasting such data.
+
+Compared with other solutions in other programming languages this package is used and maintained by professionals which conduct their work and research that requires forecasting tools. Hence we can be sure of the quality of the tools we are using.
+
+In R (and consequently in the \texttt{forecast} package) there is a small particularity that the reader should be aware of: the term frequency doesn't have its meaning from physics, but it means in fact the seasonality of the data \cite{hyndmanseasonalperiods}.
+For example if we have have seasonal data with a period of 12, which corresponds to monthly data, then in R we would specify a frequency of 12.
+This is just a notation mishap and once noted it is unlikely to cause confusion, so I advise the reader to stay alert since, depending on the context, I may use the term "frequency" to mean the seasonal period of the data.
+
+The most notable functions in the R \texttt{forecast} package are:
+\begin{itemize}
+    \item \texttt{Arima}: This function implements the ARIMA model in all its presented forms. It accepts two sets of parameters, one for the non-seasonal part and one for the seasonal part, and a seasonal period for the data, as well as the data to be predicted. Optionally, the programmer may specify external regressors as well if dummies or Fourier terms are to be used. The return value of this function is a model which can later be used to produce forecasts;
+    \item \texttt{forecast}: The \texttt{forecast} function accepts a model and a number of observations for which to produce predictions. It uses the model to generate the requested number of forecasts;
+    \item \texttt{fourier}: This is a helper method used to generate a matrix of Fourier terms used as the external regressors in the \texttt{Arima} function;
+    \item \texttt{BoxCox} and \texttt{InvBoxCox}: Computes the BoxCox transformation (and its inverse) for a given "lambda" ($ \lambda $) parameter and data set.
+\end{itemize}
+
+As we see from the functions presented above, the model fitting to data is done by the \texttt{Arima} function and the predictions are computed using the \texttt{forecast} function (which is a homonym to the package's name). These two are the main steps of the methodology I applied in forecasting the electricity consumption and production, which is presented in detail in section \ref{methodologysection}. The two functions or steps in the methodology are somewhat equivalent to the "training" and "evaluation" terminology from the domain of neural networks for example.
+
+%TODO:space
+%\subsection{Benchmark methods in code}
+%Show meanf, average, naive code.
 
 \subsection{ARIMA in code}
-Show some example arima code.
-Say about the parallelization and data down sampling.
+The code for calling the \texttt{Arima} function for building a model and creating predictions is presented in listing \ref{examplearimacode}.
+
+\begin{listing}[h]
+    \begin{minted}{R}
+    fit <- Arima(data, order=c(1, 0, 0), xreg=fourier(data, K=2))
+    predictions <- forecast(fit, h=h, xreg=fourier(data, h=h, K=2))
+    \end{minted}
+    
+    \caption{Model fitting and forecasting using the \texttt{Arima} function of the \texttt{forecast} R package}
+    \label{examplearimacode}
+\end{listing}
+
+This listing, while short, uses most of the concepts presented until now and sums up the usage of the \texttt{forecast} package.
+First, the data is fitted using an $ ARIMA(1, 0, 0) $ model with seasonality modeled by external regressors in the form of second order Fourier terms. The data may be optionally split using the 80/20 Pareto rule for training and test data. The \texttt{fourier} function automatically generated the proper number of Fourier $ sin $ and $ cos $ pairs according to the length of the data.
+
+The second part of the listing involves actually using the fitted data to create predictions. The return value of the \texttt{forecast} function is an object of class \texttt{forecast} (in an object oriented language, which R actually is). This object has several members, including a \texttt{mean} member, that stores the actual predictions of the algorithm. These are called "point predictions" since they give the actual value we might expect the data to take.
+
+The \texttt{h} parameter represents the number of observations that we want to predict. We also have to specify the external regressors that should be used when predicting the data. Since the regressors were included in the initial model fitting, we also have to provide them now in order for the model to work, otherwise predictions cannot be made due to missing data.
+
+This is a down-side of using external regressors, they have to be available for the future data at the time of forecasting, which if we'd like to use an organic value (such as temperature) to help predict other time-series creates a chicken and egg type of problem. Suppose we'd like to forecast energy consumption based on the temperature outside. This can only be done if the outside temperature is available before the electricity consumption can be made. Although one can indeed forecast the temperature first and then forecast the electricity consumption, this is not feasible since it involves two layers of forecasting and, consequently, two opportunities for errors to accumulate. This is the reason I have chosen to work with Fourier terms and dummy values for the external regressors fed into the ARIMA model. Both of them can be artificially created based on past data, cleanly solving the chicken and egg problem and avoiding accumulating errors while forecasting.
+
+In order for the forecasts to be accurate, I have heeded the advice given by Hyndman in \cite{fpp2dhr} to vary the order of the Fourier terms dynamically in order to find the best matching one.
+
+Actual code for this can be seen in listing \ref{actualKcode}.
+
+\begin{listing}[h]
+\begin{minted}{R}
+
+    best.fcast.k.1hrsPh1 <- NULL
+    best.k <- 0
+    #K must be not be greater than period/2
+    for(k in 1:(frequency(datasets[['1hrs ph1']]$series)/2))
+    {
+        print(paste("Trying k =", k))
+        m <- paste0('Arima(order=c(1, 0, 0), seasonal=c(1, 0, 0), method="CSS", xreg=fourier(., K=', k, '))')
+        xreg <- paste0('fourier(., h=h, K=', k, ')')
+        current <- fullforecast(model = m,
+        dataset = datasets[['1hrs ph1']]$series,
+        transformation = 'identity()',
+        traindays = best.traindays, # 7
+        testdays = best.testdays, # 2
+        xreg=xreg)
+        
+        if(is.null(best.fcast.k.1hrsPh1) || current$accuracy[[2]] < best.fcast.k.1hrsPh1$accuracy[[2]])
+        {
+            best.fcast.k.1hrsPh1 <- current
+            best.k <- k
+        }
+    }
+
+\end{minted}
+
+\caption{Actual code for fining the best \texttt{K} that approximates the data seasonality for use with Fourier terms as external regressors}
+\label{actualKcode}
+\end{listing}
+
+%TODO: explain the code
 Say about the "for"-s that I used to search through multiple possibilities.
 generate dummies code
 
@@ -1075,11 +1190,15 @@ talk about why I first look at a week of data thn try to generalize from that fo
 Say that I have replaced the negative values with zeros.
 
 Say about "down sampling" of data and why is it necessary.
+Data too long, forecast by chunks, which are independent.
 
-\section{Methodology}
+\section{Methodology} \label{methodologysection}
 % TODO: https://en.wikipedia.org/wiki/Box%E2%80%93Jenkins_method
+
+show the arima\_model code in steps
 start using my data as the example workflow and reiterating the theory to achieve the complete work-flow
 the methodology explains why I can parallelize the code
+Data too long, forecast by chunks, which are independent.
 
 \section{Difficulties in implementation of the methodology}
 No difficulty in the theoretical part since it is well established and widely used by now.
